
@startuml
skinparam class{
    backgroundColor<<Nouveau>> Pink
    borderColor<<Nouveau>>  Black
    backgroundColor<<Modifie>> LightGreen
    borderColor<<Modifie>>  Black
}
package moteurJeu{
interface Jeu{
+ init()
+ update(seconds: double, clavier: Clavier)
+ etreFini(): boolean
}


interface DessinJeu {
+ dessinerJeu(jeu: Jeu, canvas: Canvas)
}
}
package gamelaby.laby{
    class LabyDessin{
        + dessinerJeu(jeu: Jeu, canvas: Canvas)
    }

DessinJeu <|.. LabyDessin
    class LabyJeu{
        +init()
        +Labyjeu()
        +update(seconds : double, clavier : Clavier)
        +etreFini() : boolean
        }

Jeu <|.. LabyJeu

    class Labyrinthe <<Modifie>>{
        -murs : boolean[ ][ ]
        +Labyrinthe(nom : String)
        +getSuivant(x :int, y int, action : String ) : int[]
        +deplacerEntite(action : String)
        +etreFini() : boolean
        +getLength() : int
        +getLengthY() : int

    }
LabyJeu "1" --> "1" Labyrinthe : -labyrinthe
    interface Entite <<Nouveau>>{
        +etrePresent(dx : int, dy :int) : boolean
        + getX() : int
        + getY() : int


    }
    class Perso <<Modifie>>{
    -x : int
    -y : int
    - PERSO : String
    +etrePresent(dx : int, dy : int) : boolean
    +getX() : int
    +getY() : int

    }
    class Monstre<<Nouveau>>{
    -x : int
    -y : int
    -MONSTRE : String
    +etrePresent(dx : int, dy : int) :boolean
    +getX() : int
    +getY() : int

    }
 Entite <|.. Perso
 Entite <|.. Monstre
 Labyrinthe "1" --> "1" Perso : -pj
 Labyrinthe "1" --> "1" Monstre : -monstre
 LabyJeu <. LabyDessin:uses
    }



@enduml